# cinema

./: CMakeLists.txt  README.md
program/: CMakeLists.txt
program/src/: main.cpp
